# workstream

./: .gitignore  README.md  install.bash  install.sh  pyproject.toml  ws.py
workstream/: create.py  workstream.py  ws.py
