[tool.poetry]
name = "workstream"
version = "0.1.0"
description = "organize workstreams"
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
